--- a/modules/salesforce/package.json
+++ b/modules/salesforce/package.json
@@ -1,10 +1,9 @@
 {
-  "$schema": "./node_modules/ng-packagr/package.schema.json",
   "name": "@erento/nestjs-module-salesforce",
   "version": "1.0.0",
   "description": "NestJS module to communicate with SF and process outbound messages.",
   "main": "dist/public_api.js",
-  "types": "./dist/public_api.d.ts",
+  "types": "dist/public_api.d.ts",
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "lint": "tslint -c tslint.json --fix -e \"**/node_modules/**\" -p ./tsconfig.json",
