--- a/modules/database/package.json
+++ b/modules/database/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@erento/nestjs-module-database",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "NestJS module to work with DB with sequelize.",
   "main": "dist/public_api.js",
   "types": "dist/public_api.d.ts",
@@ -20,28 +20,28 @@
   "license": "MIT",
   "peerDependencies": {
     "@nestjs/common": ">=5.3",
-    "typescript": ">=2.7 <2.9",
+    "typescript": ">=3.0.1",
     "sequelize": ">=4.38.1",
-    "sequelize-typescript": "0.6.5"
+    "sequelize-typescript": "0.6.6"
   },
   "dependencies": {
-    "sequelize": "4.38.1",
-    "sequelize-typescript": "0.6.5"
+    "sequelize": "4.41.2",
+    "sequelize-typescript": "0.6.6"
   },
   "devDependencies": {
-    "@nestjs/common": "5.3.9",
+    "@nestjs/common": "5.4.0",
     "@types/jest": "23.3.2",
-    "@types/node": "10.10.3",
-    "husky": "1.1.0",
+    "@types/node": "10.12.10",
+    "husky": "1.2.0",
     "jest": "23.6.0",
-    "lint-staged": "7.3.0",
-    "prettier": "1.14.3",
+    "lint-staged": "8.1.0",
+    "prettier": "1.15.2",
     "reflect-metadata": "0.1.12",
-    "rxjs": "6.3.2",
-    "ts-jest": "23.10.1",
+    "rxjs": "6.3.3",
+    "ts-jest": "23.10.5",
     "tslint": "5.11.0",
     "tslint-eslint-rules": "5.4.0",
-    "typescript": "2.8.3"
+    "typescript": "3.1.6"
   },
   "precommit": [
     "lint-staged"
