--- a/modules/google-pubsub/package.json
+++ b/modules/google-pubsub/package.json
@@ -25,7 +25,8 @@
   "dependencies": {
     "@google-cloud/pubsub": "0.22.0",
     "message-crypto": "1.0.0",
-    "object-hash": "1.3.1"
+    "object-hash": "1.3.1",
+    "uuid": "3.3.2"
   },
   "devDependencies": {
     "@nestjs/common": "5.4.1",
