--- a/modules/google-pubsub/package.json
+++ b/modules/google-pubsub/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@erento/nestjs-module-google-pubsub",
-  "version": "1.1.0",
-  "description": "NestJS module to work with DB with sequelize.",
+  "version": "1.2.0",
+  "description": "NestJS module to work with Google Pub/Sub messages.",
   "main": "dist/public_api.js",
   "types": "dist/public_api.d.ts",
   "scripts": {
