--- a/modules/aws/package.json
+++ b/modules/aws/package.json
@@ -9,7 +9,7 @@
     "lint": "tslint -c tslint.json --fix -e \"**/node_modules/**\" -p ./tsconfig.json",
     "lint-staged": "lint-staged",
     "prebuild": "rm -rf dist && npm run lint && npm run test",
-    "test": "echo \"Error: no test specified\""
+    "test": "jest"
   },
   "keywords": [],
   "author": "Erento GmbH <developers@erento.com> (https://www.erento.com)",
@@ -27,12 +27,15 @@
   },
   "devDependencies": {
     "@nestjs/common": "6.5.3",
+    "@types/jest": "24.0.18",
     "@types/node": "12.6.9",
     "husky": "3.0.2",
+    "jest": "24.9.0",
     "lint-staged": "9.2.1",
     "prettier": "1.18.2",
     "reflect-metadata": "0.1.13",
     "rxjs": "6.5.2",
+    "ts-jest": "24.1.0",
     "tslint": "5.18.0",
     "tslint-eslint-rules": "5.4.0",
     "typescript": "3.5.3"
@@ -44,6 +47,20 @@
     "src/**/*.ts": [
       "npm run lint",
       "git add"
+    ]
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
     ]
   }
 }
