--- a/modules/google-pubsub/package.json
+++ b/modules/google-pubsub/package.json
@@ -23,22 +23,22 @@
     "typescript": ">=3.5"
   },
   "dependencies": {
-    "@google-cloud/pubsub": "0.30.3",
+    "@google-cloud/pubsub": "1.1.2",
     "message-crypto": "1.0.0",
-    "object-hash": "1.3.1"
+    "object-hash": "2.0.0"
   },
   "devDependencies": {
-    "@nestjs/common": "6.5.3",
-    "@types/jest": "24.0.17",
-    "@types/node": "12.6.9",
-    "husky": "3.0.2",
-    "jest": "24.8.0",
-    "lint-staged": "9.2.1",
+    "@nestjs/common": "6.8.3",
+    "@types/jest": "24.0.19",
+    "@types/node": "12.11.1",
+    "husky": "3.0.9",
+    "jest": "24.9.0",
+    "lint-staged": "9.4.2",
     "prettier": "1.18.2",
     "reflect-metadata": "0.1.13",
-    "rxjs": "6.5.2",
-    "ts-jest": "24.0.2",
-    "tslint": "5.18.0",
+    "rxjs": "6.5.3",
+    "ts-jest": "24.1.0",
+    "tslint": "5.20.0",
     "tslint-eslint-rules": "5.4.0",
     "typescript": "3.5.3"
   },
@@ -55,6 +55,7 @@
     "transform": {
       "^.+\\.tsx?$": "ts-jest"
     },
+    "testEnvironment": "node",
     "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
     "moduleFileExtensions": [
       "ts",
