--- a/modules/google-pubsub/package.json
+++ b/modules/google-pubsub/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@erento/nestjs-module-google-pubsub",
-  "version": "2.1.0",
+  "version": "2.2.0",
   "description": "NestJS module to work with Google Pub/Sub messages.",
   "main": "dist/public_api.js",
   "types": "dist/public_api.d.ts",
@@ -47,8 +47,7 @@
   ],
   "lint-staged": {
     "src/**/*.ts": [
-      "npm run lint",
-      "git add"
+      "npm run lint"
     ]
   },
   "jest": {
