--- a/modules/common/package.json
+++ b/modules/common/package.json
@@ -19,11 +19,13 @@
   },
   "license": "MIT",
   "peerDependencies": {
-    "@nestjs/common": ">=6.5",
-    "typescript": ">=3.5"
+    "@nestjs/common": "^6.11.11",
+    "@nestjs/core": "^6.11.11",
+    "typescript": ">=3.5",
+    "@bugsnag/js": "^6.5.2",
+    "@bugsnag/plugin-express": "^6.5.1"
   },
   "devDependencies": {
-    "@nestjs/common": "6.11.11",
     "@types/jest": "26.0.3",
     "@types/node": "14.0.14",
     "husky": "4.2.5",
@@ -34,7 +36,15 @@
     "ts-jest": "25.5.1",
     "tslint": "6.1.2",
     "tslint-eslint-rules": "5.4.0",
-    "typescript": "3.9.5"
+    "typescript": "3.8.3"
+  },
+  "dependencies": {
+    "@bugsnag/js": "^6.5.2",
+    "@bugsnag/plugin-express": "^6.5.1",
+    "@nestjs/common": "6.11.11",
+    "@nestjs/core": "6.11.11",
+    "express-http-context": "1.2.3",
+    "json-stringify-safe": "5.0.1"
   },
   "precommit": [
     "lint-staged"
