--- a/modules/common/package.json
+++ b/modules/common/package.json
@@ -19,13 +19,13 @@
   },
   "license": "MIT",
   "peerDependencies": {
-    "@nestjs/common": "^6.11.11",
-    "@nestjs/core": "^6.11.11",
-    "typescript": ">=3.5",
     "@bugsnag/js": "^6.5.2",
     "@bugsnag/plugin-express": "^6.5.1",
+    "@nestjs/common": "^6.11.11",
+    "@nestjs/core": "^6.11.11",
     "express-http-context": "^1.2.3",
-    "json-stringify-safe": "^5.0.1"
+    "json-stringify-safe": "^5.0.1",
+    "typescript": ">=3.5"
   },
   "devDependencies": {
     "@types/jest": "26.0.3",
