--- a/modules/common/package.json
+++ b/modules/common/package.json
@@ -28,8 +28,10 @@
     "typescript": ">=3.5"
   },
   "devDependencies": {
+    "@types/express": "4.17.7",
     "@types/jest": "26.0.4",
     "@types/node": "14.0.19",
+    "express": "4.17.1",
     "husky": "4.2.5",
     "jest": "26.1.0",
     "lint-staged": "10.2.11",
