--- a/modules/common/package.json
+++ b/modules/common/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@erento/nestjs-common",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "NestJS module with some shared utilities",
   "main": "dist/public_api.js",
   "types": "dist/public_api.d.ts",
@@ -19,8 +19,8 @@
   },
   "license": "MIT",
   "peerDependencies": {
-    "@bugsnag/js": "^6.5.2",
-    "@bugsnag/plugin-express": "^6.5.1",
+    "@bugsnag/js": "^7.2.0",
+    "@bugsnag/plugin-express": "^7.2.0",
     "@nestjs/common": "^6.11.11",
     "@nestjs/core": "^6.11.11",
     "express-http-context": "^1.2.3",
@@ -28,25 +28,29 @@
     "typescript": ">=3.5"
   },
   "devDependencies": {
-    "@types/jest": "26.0.3",
-    "@types/node": "14.0.14",
+    "@types/express": "4.17.7",
+    "@types/jest": "26.0.4",
+    "@types/node": "14.0.19",
+    "express": "4.17.1",
     "husky": "4.2.5",
     "jest": "26.1.0",
     "lint-staged": "10.2.11",
     "prettier": "2.0.5",
     "reflect-metadata": "0.1.13",
-    "ts-jest": "25.5.1",
+    "ts-jest": "26.1.1",
     "tslint": "6.1.2",
     "tslint-eslint-rules": "5.4.0",
-    "typescript": "3.8.3"
+    "typescript": "3.9.6"
   },
   "dependencies": {
-    "@bugsnag/js": "6.5.2",
-    "@bugsnag/plugin-express": "6.5.1",
+    "@bugsnag/js": "7.2.0",
+    "@bugsnag/plugin-express": "7.2.0",
     "@nestjs/common": "6.11.11",
     "@nestjs/core": "6.11.11",
+    "chalk": "4.1.0",
     "express-http-context": "1.2.3",
-    "json-stringify-safe": "5.0.1"
+    "json-stringify-safe": "5.0.1",
+    "uuid": "8.2.0"
   },
   "precommit": [
     "lint-staged"
