--- a/modules/common/package.json
+++ b/modules/common/package.json
@@ -20,12 +20,10 @@
   "license": "MIT",
   "peerDependencies": {
     "@bugsnag/js": "^7.2.0",
-    "@bugsnag/plugin-express": "^7.2.0",
     "@nestjs/common": "^6.11.11",
     "@nestjs/core": "^6.11.11",
-    "express-http-context": "^1.2.3",
-    "json-stringify-safe": "^5.0.1",
-    "typescript": ">=3.5"
+    "typescript": ">=3.5",
+    "express-http-context": "^1.2.3"
   },
   "devDependencies": {
     "@types/express": "4.17.7",
@@ -43,14 +41,13 @@
     "typescript": "3.9.6"
   },
   "dependencies": {
-    "@bugsnag/js": "7.2.0",
-    "@bugsnag/plugin-express": "7.2.0",
-    "@nestjs/common": "6.11.11",
-    "@nestjs/core": "6.11.11",
+    "@bugsnag/js": "^7.2.0",
+    "@nestjs/common": "^6.11.11",
+    "@nestjs/core": "^6.11.11",
     "chalk": "4.1.0",
-    "express-http-context": "1.2.3",
     "json-stringify-safe": "5.0.1",
-    "uuid": "8.2.0"
+    "uuid": "8.2.0",
+    "express-http-context": "^1.2.3"
   },
   "precommit": [
     "lint-staged"
