--- a/modules/common/package.json
+++ b/modules/common/package.json
@@ -20,8 +20,8 @@
   "license": "MIT",
   "peerDependencies": {
     "@bugsnag/js": "^7.2.0",
-    "@nestjs/common": "^6.11.11",
-    "@nestjs/core": "^6.11.11",
+    "@nestjs/common": ">=6.0.0 <8.0.0",
+    "@nestjs/core": ">=6.0.0 <8.0.0",
     "typescript": ">=3.5",
     "express-http-context": "^1.2.3"
   },
@@ -42,8 +42,8 @@
   },
   "dependencies": {
     "@bugsnag/js": "^7.2.0",
-    "@nestjs/common": "^6.11.11",
-    "@nestjs/core": "^6.11.11",
+    "@nestjs/common": ">=6.0.0 <8.0.0",
+    "@nestjs/core": ">=6.0.0 <8.0.0",
     "chalk": "4.1.0",
     "json-stringify-safe": "5.0.1",
     "uuid": "8.2.0",
