--- a/modules/common/package.json
+++ b/modules/common/package.json
@@ -22,8 +22,8 @@
     "@bugsnag/js": "^7.2.0",
     "@nestjs/common": ">=6.0.0 <8.0.0",
     "@nestjs/core": ">=6.0.0 <8.0.0",
-    "typescript": ">=3.5",
-    "express-http-context": "^1.2.3"
+    "express-http-context": "^1.2.3",
+    "typescript": ">=3.5"
   },
   "devDependencies": {
     "@types/express": "4.17.7",
@@ -36,8 +36,8 @@
     "prettier": "2.0.5",
     "reflect-metadata": "0.1.13",
     "ts-jest": "26.1.1",
-    "tslint": "6.1.2",
     "tslint-eslint-rules": "5.4.0",
+    "tslint": "6.1.2",
     "typescript": "3.9.6"
   },
   "dependencies": {
@@ -45,9 +45,9 @@
     "@nestjs/common": ">=6.0.0 <8.0.0",
     "@nestjs/core": ">=6.0.0 <8.0.0",
     "chalk": "4.1.0",
+    "express-http-context": "^1.2.3",
     "json-stringify-safe": "5.0.1",
-    "uuid": "8.2.0",
-    "express-http-context": "^1.2.3"
+    "uuid": "8.2.0"
   },
   "precommit": [
     "lint-staged"
