--- a/modules/common/package.json
+++ b/modules/common/package.json
@@ -19,18 +19,20 @@
   },
   "license": "MIT",
   "peerDependencies": {
-    "@bugsnag/js": "^7.2.0",
-    "@bugsnag/plugin-express": "^7.2.0",
-    "@nestjs/common": "^6.11.11",
-    "@nestjs/core": "^6.11.11",
-    "express-http-context": "^1.2.3",
-    "json-stringify-safe": "^5.0.1",
+    "@bugsnag/js": ">=7.2.0",
+    "@nestjs/common": ">=6.0.0 <8.0.0",
+    "@nestjs/core": ">=6.0.0 <8.0.0",
+    "express-http-context": ">=1.2.3",
     "typescript": ">=3.5"
   },
   "devDependencies": {
+    "@bugsnag/js": "7.2.0",
+    "@nestjs/common": "6.11.11",
+    "@nestjs/core": "6.11.11",
     "@types/express": "4.17.7",
     "@types/jest": "26.0.4",
     "@types/node": "14.0.19",
+    "express-http-context": "1.2.3",
     "express": "4.17.1",
     "husky": "4.2.5",
     "jest": "26.1.0",
@@ -38,17 +40,12 @@
     "prettier": "2.0.5",
     "reflect-metadata": "0.1.13",
     "ts-jest": "26.1.1",
-    "tslint": "6.1.2",
     "tslint-eslint-rules": "5.4.0",
+    "tslint": "6.1.2",
     "typescript": "3.9.6"
   },
   "dependencies": {
-    "@bugsnag/js": "7.2.0",
-    "@bugsnag/plugin-express": "7.2.0",
-    "@nestjs/common": "6.11.11",
-    "@nestjs/core": "6.11.11",
     "chalk": "4.1.0",
-    "express-http-context": "1.2.3",
     "json-stringify-safe": "5.0.1",
     "uuid": "8.2.0"
   },
