--- a/modules/common/package.json
+++ b/modules/common/package.json
@@ -1,13 +1,19 @@
 {
   "name": "@erento/nestjs-common",
   "version": "4.1.0",
+  "engines": {
+    "node": ">=16.0.0",
+    "npm": ">=8.0.0"
+  },
+  "engineStrict": true,
   "description": "NestJS module with some shared utilities",
-  "main": "dist/public_api.js",
-  "types": "dist/public_api.d.ts",
+  "main": "dist/public-api.js",
+  "types": "dist/public-api.d.ts",
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "lint": "tslint -c tslint.json --fix -e \"**/node_modules/**\" -p ./tsconfig.json",
-    "lint-staged": "lint-staged",
+    "lint": "eslint -c .eslintrc.json .",
+    "lint:fix": "eslint --fix -c .eslintrc.json",
+    "lint-staged": "lint-staged -c .lintstagedrc.js",
     "prebuild": "rm -rf dist && npm run lint && npm run test",
     "test": "jest"
   },
@@ -20,44 +26,40 @@
   "license": "MIT",
   "peerDependencies": {
     "@bugsnag/js": ">=7.10.1",
-    "@nestjs/common": "^7.6.17",
-    "@nestjs/core": "^7.6.17",
+    "@nestjs/common": ">=8.0.0",
+    "@nestjs/core": ">=8.0.0",
     "express-http-context": ">=1.2.4",
-    "typescript": ">=3.9.9"
+    "typescript": ">=4.0.0"
   },
   "devDependencies": {
-    "@bugsnag/js": "7.2.0",
-    "@nestjs/common": "6.11.11",
-    "@nestjs/core": "6.11.11",
-    "@types/express": "4.17.12",
-    "@types/jest": "26.0.4",
-    "@types/node": "14.0.19",
-    "express": "4.17.1",
-    "express-http-context": "1.2.3",
-    "husky": "6.0.0",
-    "jest": "26.1.0",
-    "lint-staged": "11.0.0",
-    "prettier": "2.3.0",
+    "@bugsnag/js": "7.16.1",
+    "@erento/eslint-plugin-erento-rules": "1.0.0",
+    "@nestjs/common": "8.3.0",
+    "@nestjs/core": "8.3.0",
+    "@types/express": "4.17.13",
+    "@types/jest": "27.4.0",
+    "@types/node": "16.11.25",
+    "@typescript-eslint/eslint-plugin": "5.9.0",
+    "@typescript-eslint/parser": "5.9.0",
+    "eslint": "8.6.0",
+    "eslint-plugin-import": "2.25.4",
+    "eslint-plugin-jsdoc": "37.5.1",
+    "eslint-plugin-prefer-arrow": "1.2.3",
+    "eslint-plugin-unicorn": "40.0.0",
+    "express": "4.17.2",
+    "express-http-context": "1.2.4",
+    "jest": "27.5.1",
+    "lint-staged": "12.3.4",
+    "prettier": "2.5.1",
     "reflect-metadata": "0.1.13",
-    "ts-jest": "26.1.1",
-    "tslint": "6.1.2",
-    "tslint-eslint-rules": "5.4.0",
-    "typescript": "3.9.6"
+    "ts-jest": "27.1.3",
+    "typescript": "4.5.5"
   },
   "dependencies": {
-    "chalk": "4.1.1",
+    "chalk": "4.1.2",
     "json-stringify-safe": "5.0.1",
-    "rxjs": "6.6.3",
+    "rxjs": "7.5.4",
     "uuid": "8.3.2"
-  },
-  "precommit": [
-    "lint-staged"
-  ],
-  "lint-staged": {
-    "src/**/*.ts": [
-      "npm run lint",
-      "git add"
-    ]
   },
   "jest": {
     "transform": {
