--- a/package.json
+++ b/package.json
@@ -2,9 +2,19 @@
   "name": "@erento/nestjs-modules",
   "version": "0.0.0",
   "description": "NestJS modules",
+  "engines": {
+    "node": ">=16.0.0",
+    "npm": ">=8.0.0"
+  },
+  "engineStrict": true,
   "scripts": {
     "publish": "echo \"Cannot publish the repository. You can publish particular module only.\n\" && false && exit 1",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "aws:lint-staged": "cd ./modules/aws && npm run lint-staged",
+    "common:lint-staged": "cd ./modules/common && npm run lint-staged",
+    "google-pubsub:lint-staged": "cd ./modules/google-pubsub && npm run lint-staged",
+    "salesforce:lint-staged": "cd ./modules/salesforce && npm run lint-staged",
+    "prepare": "husky install"
   },
   "private": true,
   "keywords": [],
@@ -14,6 +24,7 @@
     "url": "https://github.com/erento/nestjs-modules.git"
   },
   "license": "ISC",
-  "dependencies": {},
-  "devDependencies": {}
+  "devDependencies": {
+    "husky": "7.0.0"
+  }
 }
