--- a/modules/common/package.json
+++ b/modules/common/package.json
@@ -20,8 +20,8 @@
   "license": "MIT",
   "peerDependencies": {
     "@bugsnag/js": ">=7.16.1",
-    "@nestjs/common": "^8.2.6",
-    "@nestjs/core": "^8.2.6",
+    "@nestjs/common": ">=8.2.6",
+    "@nestjs/core": ">=8.2.6",
     "express-http-context": ">=1.2.4",
     "typescript": ">=4.5.5"
   },
