--- a/modules/google-pubsub/package.json
+++ b/modules/google-pubsub/package.json
@@ -19,8 +19,8 @@
   },
   "license": "MIT",
   "peerDependencies": {
-    "@nestjs/common": ">=8.2.6",
-    "typescript": ">=4.5.5"
+    "@nestjs/common": "^8.0.0",
+    "typescript": ">=3.9.9"
   },
   "dependencies": {
     "@google-cloud/pubsub": "1.6.0",
@@ -28,7 +28,7 @@
     "object-hash": "2.0.3"
   },
   "devDependencies": {
-    "@nestjs/common": "6.8.3",
+    "@nestjs/common": "8.3.0",
     "@types/jest": "25.1.4",
     "@types/node": "12.12.30",
     "husky": "4.2.3",
@@ -40,7 +40,7 @@
     "ts-jest": "25.2.1",
     "tslint": "5.20.1",
     "tslint-eslint-rules": "5.4.0",
-    "typescript": "3.5.3"
+    "typescript": "4.5.5"
   },
   "precommit": [
     "lint-staged"
