--- a/modules/common/package.json
+++ b/modules/common/package.json
@@ -1,6 +1,10 @@
 {
   "name": "@erento/nestjs-common",
   "version": "4.0.0",
+  "engines": {
+    "node": ">=16.0.0",
+    "npm": ">=8.0.0"
+  },
   "description": "NestJS module with some shared utilities",
   "main": "dist/public_api.js",
   "types": "dist/public_api.d.ts",
@@ -26,29 +30,35 @@
     "typescript": ">=3.9.9"
   },
   "devDependencies": {
-    "@bugsnag/js": "7.10.1",
+    "@bugsnag/js": "7.16.1",
     "@nestjs/common": "8.3.0",
     "@nestjs/core": "8.3.0",
-    "@types/express": "4.17.12",
-    "@types/jest": "26.0.4",
-    "@types/node": "14.0.19",
-    "express": "4.17.1",
+    "@types/express": "4.17.13",
+    "@types/jest": "27.4.0",
+    "@types/node": "16.11.25",
+    "@typescript-eslint/eslint-plugin": "5.9.0",
+    "@typescript-eslint/parser": "5.9.0",
+    "eslint": "8.6.0",
+    "eslint-plugin-import": "2.25.4",
+    "eslint-plugin-jsdoc": "37.5.1",
+    "eslint-plugin-prefer-arrow": "1.2.3",
+    "eslint-plugin-unicorn": "40.0.0",
+    "express": "4.17.2",
     "express-http-context": "1.2.4",
-    "husky": "6.0.0",
-    "jest": "26.1.0",
-    "lint-staged": "11.0.0",
-    "prettier": "2.3.0",
+    "husky": "7.0.4",
+    "jest": "27.5.1",
+    "lint-staged": "12.3.4",
+    "prettier": "2.5.1",
     "reflect-metadata": "0.1.13",
-    "ts-jest": "26.1.1",
-    "tslint": "6.1.2",
-    "tslint-eslint-rules": "5.4.0",
+    "ts-jest": "27.1.3",
     "typescript": "4.5.5"
   },
   "dependencies": {
-    "chalk": "4.1.1",
+    "chalk": "5.0.0",
     "json-stringify-safe": "5.0.1",
     "rxjs": "7.5.4",
-    "uuid": "8.3.2"
+    "uuid": "8.3.2",
+    "@erento/eslint-plugin-erento-rules": "1.0.0"
   },
   "precommit": [
     "lint-staged"
