fix: automatic fixes

--- a/modules/common/.eslintrc.json
+++ b/modules/common/.eslintrc.json
@@ -1,7 +1,8 @@
 {
   "root": true,
   "ignorePatterns": [
-    "projects/**/*"
+    "dist/**/*",
+    "node_modules/**/*"
   ],
   "overrides": [
     {
