--- a/modules/common/package.json
+++ b/modules/common/package.json
@@ -24,10 +24,10 @@
   "license": "MIT",
   "peerDependencies": {
     "@bugsnag/js": ">=7.10.1",
-    "@nestjs/common": "^8.0.0",
-    "@nestjs/core": "^8.0.0",
+    "@nestjs/common": ">=8.0.0",
+    "@nestjs/core": ">=8.0.0",
     "express-http-context": ">=1.2.4",
-    "typescript": ">=3.9.9"
+    "typescript": ">=4.5.5"
   },
   "devDependencies": {
     "@bugsnag/js": "7.16.1",
