--- a/modules/google-pubsub/package.json
+++ b/modules/google-pubsub/package.json
@@ -19,27 +19,33 @@
   },
   "license": "MIT",
   "peerDependencies": {
-    "@nestjs/common": "^8.0.0",
-    "typescript": ">=3.9.9"
+    "@nestjs/common": ">=8.0.0",
+    "typescript": ">=4.0.0"
   },
   "dependencies": {
-    "@google-cloud/pubsub": "1.6.0",
+    "@erento/eslint-plugin-erento-rules": "1.0.0",
+    "@google-cloud/pubsub": "2.18.5",
     "message-crypto": "1.0.0",
-    "object-hash": "2.0.3"
+    "object-hash": "2.2.0"
   },
   "devDependencies": {
     "@nestjs/common": "8.3.0",
-    "@types/jest": "25.1.4",
-    "@types/node": "12.12.30",
-    "husky": "4.2.3",
-    "jest": "25.1.0",
-    "lint-staged": "10.0.9",
-    "prettier": "1.19.1",
+    "@types/jest": "27.4.0",
+    "@types/node": "17.0.18",
+    "@typescript-eslint/eslint-plugin": "5.9.0",
+    "@typescript-eslint/parser": "5.9.0",
+    "eslint": "8.6.0",
+    "eslint-plugin-import": "2.25.4",
+    "eslint-plugin-jsdoc": "37.5.1",
+    "eslint-plugin-prefer-arrow": "1.2.3",
+    "eslint-plugin-unicorn": "40.0.0",
+    "husky": "7.0.4",
+    "jest": "27.5.1",
+    "lint-staged": "12.3.4",
+    "prettier": "2.5.1",
     "reflect-metadata": "0.1.13",
-    "rxjs": "6.5.4",
-    "ts-jest": "25.2.1",
-    "tslint": "5.20.1",
-    "tslint-eslint-rules": "5.4.0",
+    "rxjs": "7.5.4",
+    "ts-jest": "27.1.3",
     "typescript": "4.5.5"
   },
   "precommit": [
