--- a/modules/database/package.json
+++ b/modules/database/package.json
@@ -1,12 +1,16 @@
 {
   "name": "@erento/nestjs-module-database",
   "version": "3.1.0",
+  "engines": {
+    "node": ">=16.0.0",
+    "npm": ">=8.0.0"
+  },
   "description": "NestJS module to work with DB with sequelize.",
-  "main": "dist/public_api.js",
-  "types": "dist/public_api.d.ts",
+  "main": "dist/public-api.js",
+  "types": "dist/public-api.d.ts",
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "lint": "tslint -c tslint.json --fix -e \"**/node_modules/**\" -p ./tsconfig.json",
+    "lint": "eslint --fix -c .eslintrc.json",
     "lint-staged": "lint-staged",
     "prebuild": "rm -rf dist && npm run lint && npm run test",
     "test": "jest"
@@ -19,29 +23,27 @@
   },
   "license": "MIT",
   "peerDependencies": {
-    "@nestjs/common": ">=6.5",
-    "typescript": ">=3.5",
-    "sequelize": ">=4.44.3",
-    "sequelize-typescript": "0.6.6"
+    "@nestjs/common": ">=8.0.0",
+    "typescript": ">=4.0.0",
+    "sequelize": ">=6.0.0",
+    "sequelize-typescript": ">=2.0.0"
   },
   "dependencies": {
-    "sequelize": "4.44.3",
-    "sequelize-typescript": "0.6.6"
+    "sequelize": "6.16.1",
+    "sequelize-typescript": "2.1.3"
   },
   "devDependencies": {
-    "@nestjs/common": "6.5.3",
-    "@types/jest": "24.0.23",
-    "@types/node": "12.12.11",
-    "husky": "3.1.0",
-    "jest": "24.9.0",
-    "lint-staged": "9.4.3",
-    "prettier": "1.19.1",
+    "@nestjs/common": "8.3.0",
+    "@types/jest": "27.4.0",
+    "@types/node": "17.0.18",
+    "husky": "7.0.4",
+    "jest": "27.5.1",
+    "lint-staged": "12.3.4",
+    "prettier": "2.5.1",
     "reflect-metadata": "0.1.13",
-    "rxjs": "6.5.3",
-    "ts-jest": "24.1.0",
-    "tslint": "5.20.1",
-    "tslint-eslint-rules": "5.4.0",
-    "typescript": "3.5.3"
+    "rxjs": "7.5.4",
+    "ts-jest": "27.1.3",
+    "typescript": "4.5.5"
   },
   "precommit": [
     "lint-staged"
