--- a/modules/database/package.json
+++ b/modules/database/package.json
@@ -29,6 +29,7 @@
     "sequelize-typescript": ">=2.0.0"
   },
   "dependencies": {
+    "@erento/eslint-plugin-erento-rules": "1.0.0",
     "sequelize": "6.16.1",
     "sequelize-typescript": "2.1.3"
   },
@@ -36,6 +37,13 @@
     "@nestjs/common": "8.3.0",
     "@types/jest": "27.4.0",
     "@types/node": "17.0.18",
+    "@typescript-eslint/eslint-plugin": "5.9.0",
+    "@typescript-eslint/parser": "5.9.0",
+    "eslint": "8.6.0",
+    "eslint-plugin-import": "2.25.4",
+    "eslint-plugin-jsdoc": "37.5.1",
+    "eslint-plugin-prefer-arrow": "1.2.3",
+    "eslint-plugin-unicorn": "40.0.0",
     "husky": "7.0.4",
     "jest": "27.5.1",
     "lint-staged": "12.3.4",
