--- a/modules/google-pubsub/package.json
+++ b/modules/google-pubsub/package.json
@@ -5,6 +5,7 @@
     "node": ">=16.0.0",
     "npm": ">=8.0.0"
   },
+  "engineStrict": true,
   "description": "NestJS module to work with Google Pub/Sub messages.",
   "main": "dist/public-api.js",
   "types": "dist/public-api.d.ts",
