--- a/modules/aws/package.json
+++ b/modules/aws/package.json
@@ -11,7 +11,8 @@
   "types": "dist/public-api.d.ts",
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "lint": "eslint --fix -c .eslintrc.json .",
+    "lint": "eslint -c .eslintrc.json",
+    "lint:fix": "eslint --fix -c .eslintrc.json",
     "lint-staged": "lint-staged",
     "prebuild": "rm -rf dist && npm run lint && npm run test",
     "test": "jest"
@@ -28,10 +29,10 @@
     "typescript": ">=4.0.0"
   },
   "dependencies": {
-    "@erento/eslint-plugin-erento-rules": "1.0.0",
     "aws-sdk": "2.1074.0"
   },
   "devDependencies": {
+    "@erento/eslint-plugin-erento-rules": "1.0.0",
     "@nestjs/common": "8.3.0",
     "@types/jest": "27.4.0",
     "@types/node": "16.11.25",
@@ -51,14 +52,10 @@
     "ts-jest": "27.1.3",
     "typescript": "4.5.5"
   },
-  "precommit": [
-    "lint-staged"
-  ],
-  "lint-staged": {
-    "src/**/*.ts": [
-      "npm run lint",
-      "git add"
-    ]
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "jest": {
     "transform": {
