--- a/modules/common/package.json
+++ b/modules/common/package.json
@@ -11,7 +11,8 @@
   "types": "dist/public-api.d.ts",
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "lint": "eslint --fix -c .eslintrc.json .",
+    "lint": "eslint -c .eslintrc.json",
+    "lint:fix": "eslint --fix -c .eslintrc.json",
     "lint-staged": "lint-staged",
     "prebuild": "rm -rf dist && npm run lint && npm run test",
     "test": "jest"
@@ -32,6 +33,7 @@
   },
   "devDependencies": {
     "@bugsnag/js": "7.16.1",
+    "@erento/eslint-plugin-erento-rules": "1.0.0",
     "@nestjs/common": "8.3.0",
     "@nestjs/core": "8.3.0",
     "@types/express": "4.17.13",
@@ -55,20 +57,15 @@
     "typescript": "4.5.5"
   },
   "dependencies": {
-    "@erento/eslint-plugin-erento-rules": "1.0.0",
     "chalk": "4.1.2",
     "json-stringify-safe": "5.0.1",
     "rxjs": "7.5.4",
     "uuid": "8.3.2"
   },
-  "precommit": [
-    "lint-staged"
-  ],
-  "lint-staged": {
-    "src/**/*.ts": [
-      "npm run lint",
-      "git add"
-    ]
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "jest": {
     "transform": {
