--- a/modules/common/package.json
+++ b/modules/common/package.json
@@ -13,7 +13,7 @@
     "build": "tsc -p tsconfig.json",
     "lint": "eslint -c .eslintrc.json .",
     "lint:fix": "eslint --fix -c .eslintrc.json",
-    "lint-staged": "lint-staged",
+    "lint-staged": "lint-staged -c .lintstagedrc.js",
     "prebuild": "rm -rf dist && npm run lint && npm run test",
     "test": "jest"
   },
