--- a/modules/aws/package.json
+++ b/modules/aws/package.json
@@ -1,13 +1,19 @@
 {
   "name": "@erento/nestjs-module-aws",
-  "version": "2.2.0",
+  "version": "3.0.0",
+  "engines": {
+    "node": ">=16.0.0",
+    "npm": ">=8.0.0"
+  },
+  "engineStrict": true,
   "description": "NestJS module for communication with AWS.",
-  "main": "dist/public_api.js",
-  "types": "dist/public_api.d.ts",
+  "main": "dist/public-api.js",
+  "types": "dist/public-api.d.ts",
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "lint": "tslint -c tslint.json --fix -e \"**/node_modules/**\" -p ./tsconfig.json",
-    "lint-staged": "lint-staged",
+    "lint": "eslint -c .eslintrc.json .",
+    "lint:fix": "eslint --fix -c .eslintrc.json",
+    "lint-staged": "lint-staged -c .lintstagedrc.js",
     "prebuild": "rm -rf dist && npm run lint && npm run test",
     "test": "jest"
   },
@@ -19,35 +25,31 @@
   },
   "license": "MIT",
   "peerDependencies": {
-    "@nestjs/common": ">=6.5",
-    "typescript": ">=3.5"
+    "@nestjs/common": ">=8.0.0",
+    "typescript": ">=4.0.0"
   },
   "dependencies": {
-    "aws-sdk": "2.576.0"
+    "aws-sdk": "2.1074.0"
   },
   "devDependencies": {
-    "@nestjs/common": "6.5.3",
-    "@types/jest": "24.0.23",
-    "@types/node": "12.12.11",
-    "husky": "3.1.0",
-    "jest": "24.9.0",
-    "lint-staged": "9.4.3",
-    "prettier": "1.19.1",
+    "@erento/eslint-plugin-erento-rules": "1.0.0",
+    "@nestjs/common": "8.3.0",
+    "@types/jest": "27.4.0",
+    "@types/node": "16.11.25",
+    "@typescript-eslint/eslint-plugin": "5.9.0",
+    "@typescript-eslint/parser": "5.9.0",
+    "eslint": "8.6.0",
+    "eslint-plugin-import": "2.25.4",
+    "eslint-plugin-jsdoc": "37.5.1",
+    "eslint-plugin-prefer-arrow": "1.2.3",
+    "eslint-plugin-unicorn": "40.0.0",
+    "jest": "27.5.1",
+    "lint-staged": "12.3.4",
+    "prettier": "2.5.1",
     "reflect-metadata": "0.1.13",
-    "rxjs": "6.5.3",
-    "ts-jest": "24.1.0",
-    "tslint": "5.20.1",
-    "tslint-eslint-rules": "5.4.0",
-    "typescript": "3.5.3"
-  },
-  "precommit": [
-    "lint-staged"
-  ],
-  "lint-staged": {
-    "src/**/*.ts": [
-      "npm run lint",
-      "git add"
-    ]
+    "rxjs": "7.5.4",
+    "ts-jest": "27.1.3",
+    "typescript": "4.5.5"
   },
   "jest": {
     "transform": {
