--- a/modules/common/package.json
+++ b/modules/common/package.json
@@ -56,6 +56,7 @@
     "typescript": "4.5.5"
   },
   "dependencies": {
+    "axios": "0.26.0",
     "chalk": "4.1.2",
     "json-stringify-safe": "5.0.1",
     "rxjs": "7.5.4",
