--- a/modules/aws/.npmrc
+++ b/modules/aws/.npmrc
@@ -1,2 +1,2 @@
-@erento:registry=https://npm.pkg.github.com
+@erento:registry=https://npm.pkg.github.com/download/@erento
 registry=https://registry.npmjs.org
